--- a/daft-graph/views/index.ejs
+++ b/daft-graph/views/index.ejs
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+
+<head>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
+
+<body>
+
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
+  <canvas id="myChart" width="150" height="150"></canvas>
+  <script>
+    var ctx = document.getElementById('myChart').getContext('2d');
+
+    var item = "<%= arrayString %>";
+    var dataToGraph = item.split(',').map(function (item) {
+      return parseInt(item, 10);
+    });
+
+    console.log(dataToGraph);
+
+    var myChart = new Chart(ctx, {
+      type: 'bar',
+      data: {
+        labels: dataToGraph,
+        datasets: [{
+          label: 'Blanchardstown',
+          data: dataToGraph,
+          backgroundColor: [
+            'rgba(255, 99, 132, 0.2)',
+            'rgba(54, 162, 235, 0.2)',
+            'rgba(255, 206, 86, 0.2)'
+          ],
+          borderColor: [
+            'rgba(255, 99, 132, 1)',
+            'rgba(54, 162, 235, 1)',
+            'rgba(255, 206, 86, 1)'
+          ],
+          borderWidth: 0.2
+        }]
+      },
+      options: {
+        scales: {
+          yAxes: [{
+            ticks: {
+              beginAtZero: true
+            }
+          }]
+        }
+      }
+    });
+  </script>
+</body>
+
 </html>
